Bug 1274152: All in downloadable blocklist only means All Windows. r=jrmuizel

MozReview-Commit-ID: E4OwfxKZLQk

--HG--
extra : rebase_source : 45c79cff7b3de46d1016a72680ae7f36b8dea37b