toolkit/mozapps/extensions/test/xpcshell/test_gfxBlacklist_OSVersion_match.js
@@ -58,7 +58,7 @@ function run_test() {
       return;
     case "Darwin":
       // Mountain Lion
-      gfxInfo.spoofOSVersion(0x1080);
+      gfxInfo.spoofOSVersion(0x1090);
       break;
     case "Android":
       // On Android, the driver version is used as the OS version (because
